# wsl-dev

hpc/: .gitignore
hpc/templates/template-hpc/: CMakeLists.txt  README.md
hpc/templates/template-hpc/scripts/: build.sh  run.sh
hpc/templates/template-hpc/src/: main.cpp
